Web sitesi düzenleme
Site düznelendi. C# paylaşımı güncellendi.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: "Ozan'ın Blogu"
-description: "Kodlar, düşünceler ve bolca kahve."
+title: "Ozan Ağma"
+description: "Öğrendiklerim."
 author: "Ozan"
-email: "ozan@example.com"
+email: "ozanagma@gmail.com"
 baseurl: ""
 url: "https://ozanagma.github.io"
 
